# ponderada-cicd-lab

./: .gitignore  README.md  ci-mode.json  pyproject.toml
.github/actions/run-tests/: action.yml
.github/workflows/: ci.yml
entregaveis/: ENTREGA.md  README.md  coletar_metricas_pipeline.py  gerar_evidencias.py  gerar_graficos_pipeline.py  relatorio-tecnico.md  reproducao.md  requirements-viz.txt
entregaveis/dados/: pipeline_metricas.csv  pipeline_metricas.json  pipeline_metricas_limpo.csv  pipeline_steps.csv
experimento/: VARIACOES.md  hipoteses.md
scripts/: aplicar_variacao.py  export_lint_metadata.py  export_run_metrics.py  lint_probe.py  read_ci_mode.py
src/analyzer/: __init__.py  engine.py  ml.py  models.py
tests/: conftest.py  test_engine.py  test_lento.py  test_variacoes.py
